# EZ-mesoSPIM-zoom1

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
ez_mesospim_zoom1/: __init__.py  ez_pipe.py  readme.md
reg_params/: translate_left_right_sheets_params.txt
